# home_storage_vulkan

./: .gitignore  Cargo.toml  build_android.bat  element_history.rs  shaderc.rs
android/: .gitignore  settings.gradle.kts
android/app/: .gitignore  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/home_storage_vulkan/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
shaders/ui/: basic.frag  basic.vert  bitmap.frag  bitmap.vert
shaders/world/: post.frag  shader.frag  shader.vert
spv/: basic.frag.spv  basic.vert.spv  bitmap.frag.spv  bitmap.vert.spv
src/: lib.rs  main.rs
src/game/: app.rs  camera.rs  cube.rs  mod.rs  world.rs
src/game/states/: main_state.rs
src/graphics/: buffer.rs  instance.rs  main_pipeline.rs  mod.rs  post_pipeline.rs  swapchain.rs  uniform_buffer_object.rs  vertex.rs  vulkan_render.rs
